Fixed position footer that moves as page scrolls http://stackoverflow.com/questions/13140091/fixed-position-footer-that-moves-as-page-scrolls

--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,14 @@ input:-moz-placeholder {
 input::-webkit-input-placeholder {
 	color: #999;
 }
+.footer {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+  height: 50px;
+  z-index: 150;
+}
